--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <body>
 
   <header>
-    <h1>أوكسجين لمواد التنظيف</h1>
+      <nav>
+        <div class="logo">
+          <a href="index.html">أوكسجين</a>
+        </div>
+      </nav>
     <p>xxxxxxxxxxxx</p>
-    <a href="#products">منتجاتنا</a>
-    <a href="#features">مميزاتنا</a>
-    <a href="#contact">تواصل معنا</a>
-    <a href="#send">ارسل لنا رسالة</a>
+    <div class="header-buttons">
+        <a href="#products">منتجاتنا</a>
+        <a href="#features">مميزاتنا</a>
+        <a href="#contact">تواصل معنا</a>
+        <a href="#send">ارسل لنا رسالة</a>
+    </div>
   </header>
 
   <main class="container">
